Add multiple fixes to integration openAI compatability
